doc/parser/grammar_expr
# Grammar for expression parser
# file : grammar_expr
# author : Jan Lutonský, xluton02

BINOP -> MUL
       | DIV
       | ADD
       | SUB
       | STRCAT
       | LT
       | GT
       | LTE
       | GTE
       | EQ
       | NEQ

TERMS -> IVAL
       | FVAL
       | SVAL
       | VVAL

EXPRS -> EXPR
       | EXPR_PAR
       | EXPR_FCALL

EXPRS_PLUS -> EXPRS
            | EXPR_LIST

EXPR -> EXPRS BINOP EXPRS
      | ID
      | TERMS

EXPR_FCALL -> FID LPAR RPAR
            | FID LPAR EXPRS_PLUS RPAR

EXPR_PAR -> LPAR EXPRS RPAR

EXPR_LIST -> EXPRS_PLUS COMMA EXPRS

EXPR_ASSIGN -> ID ASIG EXPRS
